# gaia

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
.github/workflows/: backend.yml  frontend.yml  integration.yml
Gaia/: asgi.py  settings.py  urls.py  wsgi.py
GaiaAuth/: apps.py  models.py  serializers.py  service.py  tests.py  urls.py  views.py
GaiaAuth/migrations/: 0001_initial.py  0002_remove_user_groups_remove_user_is_superuser_and_more.py  0003_pendingactivation.py  0004_passwordreset.py  0005_user_companies.py  0006_user_groups_user_is_superuser_user_user_permissions.py
GaiaCompany/: apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
GaiaCompany/migrations/: 0001_initial.py
GaiaCore/: apps.py  tests.py
frontend/: .eslintrc.cjs  README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: CompanySwitcher.vue  LogoutButton.vue  MainNavbar.vue  SnackBar.vue
frontend/src/plugins/: axios.js  vuetify.js
frontend/src/router/: index.js  routes.js
frontend/src/services/: rules.js
frontend/src/store/: index.js  utils.js
frontend/src/store/modules/: auth.js  company.js  snackbar.js
frontend/src/styles/: settings.scss
frontend/src/views/: AskPasswordResetView.vue  HomeView.vue  LoginView.vue  PasswordResetView.vue  ProfileView.vue  RegisterView.vue
gaia/: asgi.py  settings.py  urls.py  wsgi.py
playground/: gpt.py
templates/: activate_email.html  index.html  password_reset_email.html
