[tool.black]
line-length = 120
target-version = ['py310']

[tool.poetry]
name = "gaia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dotmap = "^1.3.30"
python-dotenv = "^1.0.1"
django = "^5.0.1"
psycopg = "^3.1.18"
djangorestframework = "^3.14.0"
django-vite = "^3.0.3"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
